--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(in4200 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(in4200 main.c s1/e1/verify_limit.c s1/e1/max_min_number_in_array.c s1/e1/matrix_loop.c s1/e1/3d_array.c s1/e2/temperatures.c s1/e3/quicksort.c s2/e1/txt_bin_performance.c)
+add_executable(in4200 main.c s1/e1/verify_limit.c s1/e1/max_min_number_in_array.c s1/e1/matrix_loop.c s1/e1/3d_array.c s1/e2/temperatures.c s1/e3/quicksort.c s2/e1/txt_bin_performance.c s2/e2/copy_array.c s2/e3/3d_numerical_calculation.c s2/e2/copy_array_2.c s2/e3/solution_e3_e4.c)
